samples/_failures_safe/1761509490_e42242_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e61ccfd3.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_e61ccfd3.c:168:13: error: expected declaration or statement at end of input
  168 |             result += right;
      |             ^~~~~~
./samples/SAFE/__tmp_e61ccfd3.c:168:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e61ccfd3.c:168:13: error: expected declaration or statement at end of input
